# libSGM_LiDAR

./: CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile
include/: libsgm.h  libsgm_config.h  libsgm_wrapper.h
sample/: CMakeLists.txt  spread_sgm_image.cpp
src/: check_consistency.cu  constants.h  cost_aggregation.cu  cuda_utils.cu  internal.h  libsgm.cpp  libsgm_wrapper.cpp  spread_disparity.cu  types.h
